<resources>
    <string name="app_name">CoinLogiq Labs</string>

    <!-- Login View-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_sing_in">Sing In</string>
    <string name="login_sing_up">Sing Up</string>
    <string name="login_reset_password">Reset my password</string>
    <string name="login_sing_in_google">Sing in with Google</string>
    <string name="login_forgot_password">I have forgotten my password</string>
    <string name="login_create_account">Create new account</string>
    <string name="login_go_login">Go back to Login</string>


    <string name="title_welcome_info">BIENVENID@!!</string>

    <!-- TODO: Bottom Navition Menu-->
    <string name="navigation_bottom_inf">Info</string>
    <string name="navigation_bottom_form">Form</string>
    <string name="navigation_bottom_chat">Chat</string>
    <string name="navigation_bottom_rates">Rates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_hint_chat">Type Here a message..."</string>

    <string name="info_label_messages">Total de ATM Registrados</string>
    <string name="info_no_name">Name is not available</string>
    <string name="title_form_instructions">INSTRUCCIONES</string>

    <!--TODO: Textos del formulario pasos-->

    <string name="checkced_one">1 - Complete todos los campos del formulario.</string>
    <string name="turn_on_gps">2 - Habilite los permisos del GPS.</string>
    <string name="window_chat">5 - Utilce la ventana del chat para cualquier duda.</string>
    <string name="internet_conect">3 - Habilite los permisos de internet</string>
    <string name="save_form">4 - Cuando el formularion este completo oprima el boton enviar</string>

    <!--TODO: Textos del formulario Registros ATM-->
    <string name="title_form_fragment">FORMULARIO REGISTRO CAJERO</string>
    <string name="input_hint_local_name">Ubicación / Local</string>
    <string name="input_hint_local_direccion">Direccion:</string>
    <string name="selected_owner">Seleccione Dueño</string>
    <string name="input_id_owner">Ingrese ID del Cajero: ejemplo DL6Z-79</string>
    <string name="text_laltitud_example">Latitud: -74.345677</string>
    <string name="text_longitud_example">Longitud: 56.123455</string>
    <string name="guardar_formulario">Guardar</string>

    <string name="options_menu_sign_out">Sign Out</string>

    <string name="dialog_title">Rate the App!</string>
    <string name="dialog_edit_text">Leave your feedback</string>
    <string name="dialog_ok">Rate</string>
    <string name="dialog_cancel">Cancel</string>
</resources>
