<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:fillViewport="true"
        tools:context=".ui.activities.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edit_text_height"
                    android:paddingLeft="@dimen/login_space"
                    android:paddingRight="@dimen/login_space"
                    android:background="@drawable/edittext_rounded"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_email"
                    android:textSize="@dimen/login_text_size" android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/editTextPassword"/>

            <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edit_text_height"
                    android:paddingLeft="@dimen/login_space"
                    android:paddingRight="@dimen/login_space"
                    android:background="@drawable/edittext_rounded"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:inputType="textPassword"
                    android:hint="@string/login_password"
                    android:textSize="@dimen/login_text_size"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/btn_login"/>

            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_xl_height"
                    android:text="@string/login_sing_in"
                    android:textColor="@color/common_google_signin_btn_text_dark"
                    android:textSize="@dimen/login_text_xl_size"
                    android:background="@drawable/button_ripple_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintBottom_toTopOf="@+id/textViewForgotPass"
                    android:layout_marginBottom="32dp"/>

            <TextView
                    android:id="@+id/textViewForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/colorSecondaryText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/btnLoginGoogle" android:layout_marginBottom="32dp"/>

            <Button
                    android:id="@+id/btnLoginGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_height"
                    android:text="@string/login_sing_in_google"
                    android:textColor="@color/colorPrimaryText"
                    android:background="@drawable/button_ripple_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toTopOf="@+id/btnSingUp"
                    android:layout_marginBottom="32dp"/>

            <Button
                    android:id="@+id/btnSingUp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_xl_height"
                    android:background="@drawable/button_ripple"
                    android:text="@string/login_create_account"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/login_text_size"
                    app:layout_constraintBottom_toBottomOf="parent" tools:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/light"
                    android:id="@+id/imageView2"
                    app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>